--- a/FileFlux/Pages/DownloadsPage.xaml
+++ b/FileFlux/Pages/DownloadsPage.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FileFlux"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodel="clr-namespace:FileFlux.ViewModel"
              xmlns:model="clr-namespace:FileFlux.Model"
              x:DataType="viewmodel:DownloadsViewModel"
              xmlns:strings="clr-namespace:FileFlux.Localization"
              x:Class="FileFlux.DownloadsPage"             
+             x:Name="downloadsPage"
              BackgroundColor="Transparent"
              Title="Downloads - FileFlux">
     <ContentPage.Resources>
@@ -16,11 +18,6 @@
         <ToolbarItem Command="{Binding NewDownload}">
             <ToolbarItem.IconImageSource>
                 <FontImageSource FontFamily="FAS" Glyph="&#xf019;" Size="18" />
-            </ToolbarItem.IconImageSource>
-        </ToolbarItem>
-        <ToolbarItem Command="{Binding PauseDownload}">
-            <ToolbarItem.IconImageSource>
-                <FontImageSource FontFamily="FAS" Glyph="&#xf04c;" Size="18" />
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
         <ToolbarItem Command="{Binding ClearDownloads}">
@@ -41,23 +38,6 @@
                     <FontImageSource FontFamily="FAS" Size="16" Glyph="&#xf019;"/>
                 </ImageButton.Source>
             </ImageButton>
-            <BoxView HeightRequest="28" WidthRequest="1"  Color="Grey" VerticalOptions="FillAndExpand"/>
-            <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding CancelDownload}">
-                <ImageButton.Source>
-                    <FontImageSource FontFamily="FAS" Size="16" Glyph="&#xf05e;"/>
-                </ImageButton.Source>
-            </ImageButton>
-            <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding ToggleDownloadStatus}" IsVisible="True">
-                <ImageButton.Source>
-                    <FontImageSource FontFamily="FAS" Size="16" Glyph="&#xf04c;" />
-                </ImageButton.Source>
-                <ImageButton.Triggers>
-                    <DataTrigger Binding="{Binding SelectedItem?.Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}" TargetType="ImageButton">
-                        <Setter Property="IsVisible" Value="True"/>
-                    </DataTrigger>
-                </ImageButton.Triggers>
-            </ImageButton>
-            <BoxView HeightRequest="28" WidthRequest="1"  Color="Grey" VerticalOptions="FillAndExpand" />
             <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding ClearDownloads}">
                 <ImageButton.Source>
                     <FontImageSource FontFamily="FAS" Size="16" Glyph="&#xf51a;" />
@@ -65,14 +45,22 @@
             </ImageButton>
         </HorizontalStackLayout>
         <ScrollView BackgroundColor="Transparent" Grid.Row="1">
-            <ListView ItemsSource="{Binding Downloads}" BackgroundColor="Transparent" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
-                <ListView.Header>
-                    <BoxView HorizontalOptions="FillAndExpand" HeightRequest="1" Color="Grey" />
-                </ListView.Header>
+            <ListView ItemsSource="{Binding Downloads}" BackgroundColor="Transparent" SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="model:FileDownload">
                         <ViewCell>
+                            <ViewCell.ContextActions>
+                                <MenuItem Text="Pause" />
+                                <MenuItem Text="Cancel"/>
+                            </ViewCell.ContextActions>
                             <Grid RowSpacing="16" ColumnSpacing="16" BackgroundColor="Transparent" Padding="16">
+                                <Grid.Behaviors>
+                                    <toolkit:AnimationBehavior>
+                                        <toolkit:AnimationBehavior.AnimationType>
+                                            <toolkit:FadeAnimation/>
+                                        </toolkit:AnimationBehavior.AnimationType>
+                                    </toolkit:AnimationBehavior>
+                                </Grid.Behaviors>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="*" />
@@ -81,8 +69,8 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>                              
                                 <Image Grid.Column="0">
                                     <Image.Source>
                                         <FontImageSource FontFamily="FAS" Glyph="&#xf15b;" Size="64" />
@@ -103,6 +91,38 @@
                                     <Label Text="{Binding PercentCompleted,StringFormat='Percent Completed: {0:F2}%'}" FontSize="Micro" />
                                     <Label Text="{Binding TotalSize, Converter={StaticResource FileSizeConverter}}" FontSize="Micro" />
                                 </VerticalStackLayout>
+                                <HorizontalStackLayout Spacing="10" Grid.Column="2">
+                                    <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.CancelDownload}" CommandParameter="{Binding .}" ToolTipProperties.Text="Cancel Download" IsVisible="Collapse">
+                                        <ImageButton.Triggers>
+                                            <DataTrigger TargetType="ImageButton" Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}">
+                                                <Setter Property="IsVisible" Value="Visible"/>
+                                            </DataTrigger>
+                                        </ImageButton.Triggers>
+                                        <ImageButton.Source>
+                                            <FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf05e;" Color="Red"/>
+                                        </ImageButton.Source>
+                                    </ImageButton>
+                                    <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.ToggleDownloadStatus}" CommandParameter="{Binding .}" ToolTipProperties.Text="Pause Download" IsVisible="Collapse">
+                                        <ImageButton.Source>
+                                            <FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04c;" />
+                                        </ImageButton.Source>
+                                        <ImageButton.Triggers>
+                                            <DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.InProgress}" TargetType="ImageButton">
+                                                <Setter Property="IsVisible" Value="Visible"/>
+                                            </DataTrigger>
+                                        </ImageButton.Triggers>
+                                    </ImageButton>
+                                    <ImageButton BackgroundColor="Transparent" BorderWidth="0" Command="{Binding Source={x:Reference downloadsPage}, Path=BindingContext.DeleteCommand}" CommandParameter="{Binding .}" ToolTipProperties.Text="Delete Download" IsVisible="Collapse">
+                                        <ImageButton.Source>
+                                            <FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf1f8;" />
+                                        </ImageButton.Source>
+                                        <ImageButton.Triggers>
+                                            <DataTrigger Binding="{Binding Status}" Value="{x:Static model:FileDownloadStatuses.Completed}" TargetType="ImageButton">
+                                                <Setter Property="IsVisible" Value="Visible"/>
+                                            </DataTrigger>
+                                        </ImageButton.Triggers>
+                                    </ImageButton>
+                                </HorizontalStackLayout>
                                 <BoxView Color="White" Grid.Row="1" Grid.ColumnSpan="3" HorizontalOptions="FillAndExpand" HeightRequest="1" Margin="10,0" />
                             </Grid>
                         </ViewCell>
