--- a/FileFlux/Pages/DownloadsPage.xaml
+++ b/FileFlux/Pages/DownloadsPage.xaml
@@ -15,6 +15,16 @@
 		<ResourceDictionary>
 			<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04c;" x:Key="PauseGlyph" />
 			<FontImageSource FontFamily="FAS" Size="18" Glyph="&#xf04b;" x:Key="ResumeGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c7;" x:Key="FileAudioGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c8;" x:Key="FileVideoGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c6;" x:Key="FileArchiveGlyph" />			
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c5;" x:Key="FileImageGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c2;" x:Key="FileWordGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c3;" x:Key="FileExcelGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c4;" x:Key="FilePowerPointGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf1c1;" x:Key="FilePdfGlyph" />
+			<FontImageSource FontFamily="FAS" Size="64" Glyph="&#xf15c;" x:Key="FileTextGlyph" />
+			
 		</ResourceDictionary>
 		<local:FileSizeConverter x:Key="FileSizeConverter" />
 		<local:StatusConverter x:Key="StatusConverter" />
@@ -62,6 +72,11 @@
 								<Image.Source>
 									<FontImageSource FontFamily="FAS" Glyph="&#xf15b;" Size="64" />
 								</Image.Source>
+								<Image.Triggers>
+									<DataTrigger Binding="{Binding ContentType}" TargetType="Image" Value="">
+										<Setter Property="Source" Value="{StaticResource Key='FileAudioGlyph'}" />
+									</DataTrigger>
+								</Image.Triggers>
 							</Image>
 							<VerticalStackLayout Grid.Column="1" HorizontalOptions="Start">
 								<Label Text="{Binding FileName}" FontSize="Small" />
